@@ -17,11 +17,15 @@ import com.tugalsan.api.thread.server.sync.TS_ThreadSyncLst;
 import com.tugalsan.api.thread.server.TS_ThreadWait;
 import com.tugalsan.api.thread.server.sync.TS_ThreadSyncTrigger;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.Duration;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.Properties;
 import java.util.StringJoiner;
 import java.util.stream.IntStream;
+import javax.swing.JLabel;
 
 //WHEN RUNNING IN NETBEANS, ALL DEPENDENCIES SHOULD HAVE TARGET FOLDER!
 //cd C:\me\codes\com.tugalsan\dsk\com.tugalsan.dsk.serialyh
@@ -37,17 +41,17 @@ public class Main {
     public static volatile int modeRequested = 1;
     public static volatile GUI gui;
 
-    final public static Path fileCmd = Path.of("C:", "com.tugalsan.dsk.serialyh", "cmd.txt");
-    final public static Path fileRes = Path.of("C:", "com.tugalsan.dsk.serialyh", "res.txt");
+    final public static Path fileCmd = Paths.get("C:", "com.tugalsan.dsk.serialyh", "cmd.txt");
+    final public static Path fileRes = Paths.get("C:", "com.tugalsan.dsk.serialyh", "res.txt");
     final public static String propsParamPrefix = "bath_timer_";
     public static String COMX;
 
     public static TS_ThreadSyncTrigger killTrigger = TS_ThreadSyncTrigger.of();
 
     public static void main(String... s) {
-        var portNames = TS_SerialComKinConyKC868_A32_R1_2.portNames();
+        List<String> portNames = TS_SerialComKinConyKC868_A32_R1_2.portNames();
         if (s.length == 0) {
-            var sb = new StringBuilder()
+            StringBuilder sb = new StringBuilder()
                     .append("USAGE: java --enable-preview --add-modules jdk.incubator.concurrent \\")
                     .append("\n       -jar target/com.tugalsan.dsk.serialyh-1.0-SNAPSHOT-jar-with-dependencies.jar COMX");
             if (portNames.isEmpty()) {
@@ -80,8 +84,8 @@ public class Main {
                         );
                         if (mem_int_last.status == Mem_Int.STATUS.OK) {
                             IntStream.range(0, 16).forEachOrdered(i -> {//BUTTON UPDATE
-                                var memVal = mem_int_last.mem_int.get().get(32 * 3 + i);
-                                var lstStr = gui.lstValues.get(i);
+                                Integer memVal = mem_int_last.mem_int.get().get(32 * 3 + i);
+                                JLabel lstStr = gui.lstValues.get(i);
                                 if (Objects.equals(memVal, lstStr)) {
                                     return;
                                 }
@@ -90,7 +94,7 @@ public class Main {
                         }
                     }
                     if (!TS_FileUtils.isExistFile(fileCmd)) {
-                        var sj = new StringJoiner("\n");
+                        StringJoiner sj = new StringJoiner("\n");
                         IntStream.range(0, 16).forEachOrdered(i -> {
                             sj.add(propsParamPrefix + i + "=" + mem_int_last.lstTI.get(i));
                         });
@@ -100,14 +104,14 @@ public class Main {
                         TS_FileTxtUtils.toFile(TS_FileUtils.getTimeLastModified(fileCmd) + " CMD_INIT", fileRes, false);
                     }
                     if (mem_int_last.mode.orElse(0) == 0) {
-                        var result = TS_SerialComKinConyKC868_A32_R1_2.mode_setIdx(killTrigger, COMX, modeRequested);
+                        boolean result = TS_SerialComKinConyKC868_A32_R1_2.mode_setIdx(killTrigger, COMX, modeRequested);
                         d.ce("mode_setIdx", modeRequested, result);
                     }
                     continue;
                 }
-                var lst = cmdValues16.popFirst(val -> true);
+                List<Integer> lst = cmdValues16.popFirst(val -> true);
                 d.ce("set_lst", lst);
-                var lstIdx = TGS_StreamUtils.toLst(IntStream.range(0, lst.size()).filter(i -> lst.get(i) != 0));
+                List<Integer> lstIdx = TGS_StreamUtils.toLst(IntStream.range(0, lst.size()).filter(i -> lst.get(i) != 0));
                 d.ce("set_osc", lstIdx);
                 if (TS_SerialComKinConyKC868_A32_R1_2.memInt_setAll(Main.killTrigger, COMX, lst) && TS_SerialComKinConyKC868_A32_R1_2.digitalOut_oscilateAll(Main.killTrigger, COMX, lstIdx)) {
                     gui.taReply.setText("Değişiklik başarılı.");
@@ -121,14 +125,14 @@ public class Main {
         TS_FileWatchUtils.file(Main.killTrigger, fileCmd, () -> {
             d.cr("watcher", "detected");
             TS_ThreadWait.seconds("wait.watch", Main.killTrigger, 1);
-            var props = TS_FilePropertiesUtils.createPropertyReader(fileCmd);
-            if (props.isEmpty()) {
+            Optional<Properties> props = TS_FilePropertiesUtils.createPropertyReader(fileCmd);
+            if (!props.isPresent()) {
                 d.cr("watcher", "props.isEmpty()");
                 return;
             }
             List<Integer> bath_timers = TGS_ListUtils.of();
             IntStream.range(0, 16).forEachOrdered(i -> {
-                var val = TGS_CastUtils.toInteger(props.get().getProperty(propsParamPrefix + i));
+                Integer val = TGS_CastUtils.toInteger(props.get().getProperty(propsParamPrefix + i));
                 if (val == null) {
                     d.cr("watcher", "param_null", propsParamPrefix + i);
                     return;
